updated to focus on new additions

--- a/Topic modeling of job reviews.ipynb
+++ b/Topic modeling of job reviews.ipynb
@@ -2280,6 +2280,75 @@
     "doc_term_tfidf = vec_tfidf.fit_transform(full_data_long).toarray()\n",
     "pd.DataFrame(doc_term_tfidf, columns = vec_tfidf.get_feature_names_out()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f2534fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spaCy application\n",
+    "#!python -m spacy download en_core_web_sm #this is the language model we are using--alternatives exist\n",
+    "import spacy\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "\n",
+    "# use .pipe() to iterate over full corpora\n",
+    "df['spacy_doc'] = list(nlp.pipe(df.Text)) #update these terms so it matches current problem then save as new column\n",
+    "df[['spacy_doc', 'Type']].head()\n",
+    "\n",
+    "# extract top adjectives for pros and cons reviews\n",
+    "pos_reviews = df[df.Type == 'pos']\n",
+    "pos_adj = [token.text.lower() for doc in \n",
+    "\t\t\t\t\t\tpos_reviews.spacy_doc \n",
+    "\t\t\t\t\t\tfor token in doc if \n",
+    "\t\t\t\t\t\ttoken.pos_ == 'ADJ'] #pos here is \"part of speech\" not positive\n",
+    "\n",
+    "neg_reviews = df[df.Type == 'neg']\n",
+    "neg_adj = [token.text.lower() for doc in \n",
+    "\t\t\t\t\t\tneg_reviews.spacy_doc \n",
+    "\t\t\t\t\t\tfor token in doc if \n",
+    "                            token.pos_ == 'ADJ'] #pos here is \"part of speech\" not positive\n",
+    "\n",
+    "# find adjective modifiers of some noun \n",
+    "noun_str = 'neighborhood'\n",
+    "adj_modifiers = []\n",
+    "top_adj_mod = []\n",
+    "\n",
+    "for doc in df.spacy_doc: \n",
+    "    for token in doc:\n",
+    "        if token.text == noun_str:\n",
+    "            for child in token.children:\n",
+    "                if child.dep_ == 'amod':\n",
+    "                    adj_modifiers.append(child.text.lower())\n",
+    "\n",
+    "top_adj_mod = Counter(adj_modifiers).most_common(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a4c273b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scattertext application\n",
+    "# note: might need to take a random sample of dataset as ours might be too large\n",
+    "# refer to scatter text demo, and exercise 4 in fancy nlp for hep\n",
+    "import scattertext as st\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('example.csv')\n",
+    "\n",
+    "corpus = st.CorpusFromPandas(df,\n",
+    "\t\t\t\t\t\tcategory_col = 'category',\n",
+    "\t\t\t\t\t\ttext_col = 'text',\n",
+    "\t\t\t\t\t\tnlp = ...).build()\n",
+    "\n",
+    "# following should be starting place if needing to random sample \n",
+    "df.sample(5, random_state=10)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
