final project upload

--- a/Topic modeling of job reviews.ipynb
+++ b/Topic modeling of job reviews.ipynb
@@ -700,10 +700,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "66857dc1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'vec' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#term_doc = doc_term.transpose\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#term_doc = vec.fit_transform(full_data.Description).transpose()\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m term_doc \u001b[38;5;241m=\u001b[39m \u001b[43mvec\u001b[49m\u001b[38;5;241m.\u001b[39mfit_transform(data_description[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOutput\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mstr\u001b[39m))\u001b[38;5;241m.\u001b[39mtranspose()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'vec' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#term_doc = doc_term.transpose\n",
     "#term_doc = vec.fit_transform(full_data.Description).transpose()\n",
